# ix_Library

./: .gitignore
Logger/: Logger.cpp  Logger.h
Socket/: Client_Socket.cpp  Client_Socket.h  Server_Socket.h  Socket.h
boostTest/Dispatcher/: Dispatcher.h  ServerDispatcher.cpp  ServerDispatcher.h
boostTest/client/: client.cpp  client.h
boostTest/server/: server.cpp  server.h
boostTest/tcp_serivce/: tcp_service.cpp  tcp_service.h
boostTest/tcp_service/: tcp_service.cpp  tcp_service.h
boostTest/udp_server/: UdpServer.cpp  UdpServer.h
macro/: HasMemberFunc.h
projects/Client/: CMakeLists.txt  main.cpp
projects/Client/app/: LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SignInWidget.cpp  SignInWidget.h  SignInWidget.ui
projects/Client/src/Dispatcher/: ClientDispatcher.cpp  ServerDispatcher.cpp
projects/Client/src/Logger/: Logger.cpp
projects/Client/src/Session/: Session.cpp  Session.h
projects/Client/src/client/: client.cpp  client.h
projects/Client/src/server/: server.cpp  server.h
projects/Client/src/tcp_service/: tcp_service.cpp  tcp_service.h
projects/Client/src/utility/JsonInterpreter/: JsonInterpreter.cpp
projects/Client/src/utility/SqlConnectionPool/: SqlConnectionPool.cpp  SqlConnectionPool.h
projects/SerialPort/: SerialPort.pro  main.cpp  res.qrc  widget.cpp  widget.h  widget.ui
projects/SerialPort/src/: mycombobox.cpp  mycombobox.h  mythread.cpp  mythread.h  utils.cpp  utils.h
projects/Server/: CMakeLists.txt  Server.cpp
projects/Server/app/: MainWindow.cpp  MainWindow.h  MainWindow.ui
projects/Server/src/Dispatcher/: ClientDispatcher.cpp  ClientDispatcher.h  ServerDispatcher.cpp
projects/Server/src/Logger/: Logger.h
projects/Server/src/Session/: Session_serv.cpp
projects/Server/src/client/: client.cpp  client.h
projects/Server/src/server/: server.cpp  server.h
projects/Server/src/utility/JsonInterpreter/: JsonInterpreter.h
projects/Server/src/utility/SqlConnectionPool/: SqlConnectionPool.cpp
projects/boostAsioServer/: CMakeLists.txt  Client.cpp  Server.cpp
projects/boostAsioServer/src/Dispatcher/: ClientDispatcher.cpp  ClientDispatcher.h  Dispatcher.h  ServerDispatcher.cpp  ServerDispatcher.h
projects/boostAsioServer/src/Logger/: Logger.h
projects/boostAsioServer/src/Session/: Session.cpp  Session.h  Session_serv.h
projects/boostAsioServer/src/ThreadPool_singleton/: ThreadPool_singleton.h
projects/boostAsioServer/src/client/: client.cpp  client.h
projects/boostAsioServer/src/server/: server.cpp  server.h
projects/boostAsioServer/src/tcp_service/: tcp_service.cpp  tcp_service.h
projects/boostAsioServer/src/utility/JsonInterpreter/: JsonInterpreter.cpp  JsonInterpreter.h
projects/boostAsioServer/src/utility/SqlConnectionPool/: SqlConnectionPool.cpp  SqlConnectionPool.h
projects/龙卷风播放器/: CMakeLists.txt  main.cpp  resources.qrc
projects/龙卷风播放器/app/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyApp.cpp  MyApp.h
projects/龙卷风播放器/src/: GlobalVariable.h
projects/龙卷风播放器/src/AudioThread/: AudioThread.cpp  AudioThread.h
projects/龙卷风播放器/src/Enums/: Enums.cpp  Enums.h
projects/龙卷风播放器/src/RenderThread/: RenderThread.cpp  RenderThread.h
projects/龙卷风播放器/src/ffmpeg/: AudioData.h  DecoderWorker.cpp  DecoderWorker.h  VideoData.h  VideoInfo.h
projects/龙卷风播放器/src/utils/: formula.h  thread_utils.h
projects/龙卷风播放器/src/utils/HighQualityTimer/: HighQualityTimer.cpp  HighQualityTimer.h
projects/龙卷风播放器/src/utils/MemoryPool/: MemoryPool.cpp  MemoryPool.h
projects/龙卷风播放器/src/utils/PauseElapsedTimer/: PauseElpasedTimer.cpp  PauseElpasedTimer.h
projects/龙卷风播放器/src/utils/RingBuffer/: RingBuffer.cpp  RingBuffer.h
projects/龙卷风播放器/src/utils/ThreadPool_singleton/: ThreadPool_singleton.h
pycharm/: 交互式抠图.py  人脸检测和车牌识别.py  分水岭.py  图像拼接.py  模板匹配.py  目标追踪.py  背景分离.py  虚拟计算器.py  车牌检测.py  银行卡识别.py
pycharm/无敌割草/: IxObject.py  main.py  player.py
pycharm/无敌割草/Ai_level/: Ai_level.py  Ai_level1.py
pycharm/无敌割草/BaseObject/: Weapon.py
pycharm/无敌割草/Enemy/: enemy.py
pycharm/无敌割草/GameWorld/: GameWorld.py
pycharm/无敌割草/behavior_tree/: Chase.py  Guard.py  Node.py  SelectNode.py
pycharm/无敌割草/feedback/: KillFeedback.py
pycharm/无敌割草/utils/: EventManager.py  FontSys.py  InputManager.py  QuadTree.py  Resolution.py  ResourceManager.py  Timer.py
pycharm/无敌割草/weapon/: Sword.py
pycharm/无敌割草/widget/: MainWindow.py  widget.py
socket/DataStructure/: DataStructure.cpp  DataStructure.h
socket/Epoll/: Epoll.cpp  Epoll.h
socket/Socket/: Client_Socket.cpp  Client_Socket.h  Server_Socket.cpp  Server_Socket.h  Socket.cpp  Socket.h
socket/Socket_non_blocking/: Client_Socket.cpp  Server_Socket.cpp  Socket.cpp  Socket.h
utility/JsonInterpreter/: JsonInterpreter.cpp  JsonInterpreter.h
utility/JsonUtility/: JsonUtility.cpp  JsonUtility.h
utility/Logger/: Logger.cpp  Logger.h
utility/ThreadPool/: ThreadPool.cpp  ThreadPool.h
utility/ThreadPool_singleton/: ThreadPool_singleton.cpp  ThreadPool_singleton.h
